--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -1,64 +1,58 @@
-index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>YaadLife Lite</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body, html { height:100%; font-family: 'Arial', sans-serif; overflow:hidden; background:#0A3D62; }
-    #map {
-      width: 100%;
-      height: 100vh;
-      background: url('https://raw.githubusercontent.com/RootsRaddik6/Yaadvibe/main/IMG_039.jpeg') center/cover no-repeat;
-      background-attachment: fixed;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
-    .overlay {
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      background: linear-gradient(to bottom, #000428, #004e92);
+      color: gold;
+      font-family: 'Arial', sans-serif;
       text-align: center;
-      color: #FFD700;
-      text-shadow: 0 0 20px rgba(0,0,0,0.9);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       padding: 20px;
-      max-width: 90%;
-      z-index: 10;
     }
-    h1 {
-      font-size: 3rem;
-      margin: 0 0 20px;
-      line-height: 1.1;
-      font-weight: 900;
-    }
-    .palm { font-size: 2.5rem; margin: 0 10px; vertical-align: middle; }
+    img { max-width: 100%; height: auto; border-radius: 12px; margin: 20px 0; }
     button {
-      background: #FFD700;
-      color: #0A3D62;
-      padding: 18px 40px;
+      background: gold;
+      color: #000428;
       border: none;
-      border-radius: 16px;
-      font-size: 1.5rem;
+      padding: 16px 32px;
+      font-size: 18px;
       font-weight: bold;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.4);
-      margin-top: 15px;
-      transition: all 0.2s;
+      border-radius: 50px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: 0.3s;
     }
-    button:active { transform: scale(0.95); }
+    button:hover { background: #004e92; color: gold; }
+    .palm { font-size: 2.5rem; margin: 10px 0; }
   </style>
 </head>
 <body>
-  <div id="map">
-    <div class="overlay">
-      <h1>YaadLife<span class="palm">🌴</span>Lite</h1>
-      <button onclick="Telegram.WebApp.showAlert('Hunt X → Book Villa → Earn SBT')">Launch the Island</button>
-    </div>
-  </div>
+  <div class="palm">Welcome to YaadLife</div>
+  <img src="IMG_0039.jpeg" alt="Moonrise over the Yaad" />
+  <button id="launchBtn">Launch the Island</button>
+
   <script>
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
+    document.getElementById('launchBtn').addEventListener('click', () => {
+      console.log('Button commanded — bridging to YaadVibe DApp');
+      alert("YaadVibe loading... Select villa, pay with TON, mint SBT. On-chain irie incoming.");
+
+      // BRIDGE: Redirect to YaadVibe DApp (same domain)
+      window.location.href = '/YaadVibe';
+    });
+
+    // Auto-redirect if in Telegram WebApp
+    if (window.Telegram?.WebApp) {
+      window.Telegram.WebApp.ready();
+      document.getElementById('launchBtn').click(); // Auto-launch in bot
+    }
   </script>
 </body>
 </html>
