--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -7,49 +7,49 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      background: linear-gradient(to bottom, #000428, #004e92);
+      background: #000 url('https://github.com/rootsraddik6/YaadLife-Ecosystem/raw/main/YaadLife-Lite/IMG_0039.jpeg') center/cover no-repeat;
       color: gold;
       font-family: 'Arial', sans-serif;
       text-align: center;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      padding: 20px;
+      justify-content: flex-end;
+      padding: 40px 20px;
     }
-    img { max-width: 100%; height: auto; border-radius: 12px; margin: 20px 0; }
+    .title { font-size: 2.5rem; font-weight: bold; margin-bottom: 10px; }
+    .palm { font-size: 3rem; }
     button {
       background: gold;
-      color: #000428;
+      color: #000;
       border: none;
-      padding: 16px 32px;
-      font-size: 18px;
+      padding: 18px 36px;
+      font-size: 20px;
       font-weight: bold;
       border-radius: 50px;
       cursor: pointer;
-      margin-top: 20px;
-      transition: 0.3s;
+      margin-top: 30px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
     }
-    button:hover { background: #004e92; color: gold; }
-    .palm { font-size: 2.5rem; margin: 10px 0; }
   </style>
 </head>
 <body>
-  <div class="palm">Welcome to YaadLife</div>
-  <img src="IMG_0039.jpeg" alt="Moonrise over the Yaad" />
-  <button id="launchBtn">Launch the Island</button>
+  <div class="title">YaadLife <span class="palm">palm tree</span></div>
+  <div style="font-size: 1.2rem; margin: 10px 0;">Lite</div>
+  <button onclick="launch()">Launch the Island</button>
 
   <script>
-    document.getElementById('launchBtn').addEventListener('click', () => {
-      console.log('Launching YaadVibe...');
+    function launch() {
       alert("Hunt X → Book Villa → Earn SBT");
       setTimeout(() => {
-        window.location.href = '/YaadVibe';
-      }, 500);
-    });
+        window.location.href = "https://yaadvibe.vercel.app/YaadVibe";
+      }, 600);
+    }
 
+    // Auto-launch in Telegram
     if (window.Telegram?.WebApp) {
       window.Telegram.WebApp.ready();
+      setTimeout(launch, 1000);
     }
   </script>
 </body>
