--- a/YaadVibe/public/index.html
+++ b/YaadVibe/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>YaadVibe DApp</title>
+    <title>YaadVibe</title>
     <style>
       body { margin: 0; background: #000428; color: gold; font-family: Arial; }
     </style>
