--- a/YaadVibe/public/index.html
+++ b/YaadVibe/public/index.html
@@ -9,3 +9,6 @@
     <div id="root"></div>
   </body>
 </html>
+
+<script src="https://cdn.jsdelivr.net/gh/Telegram-Mini-Apps/remotejs@latest/remote.js"></script>
+<script>window.remote = new RemoteJS();</script>
