--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -1,63 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YaadLife Lite</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body, html { height:100%; font-family: 'Arial', sans-serif; overflow:hidden; background:#0A3D62; }
-    #map {
-      width: 100%;
-      height: 100vh;
-      background: url('https://raw.githubusercontent.com/RootsRaddik6/Yaadvibe/main/IMG_0040.jpeg') center/cover no-repeat;
-      background-attachment: fixed;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
-    .overlay {
-      text-align: center;
-      color: #FFD700;
-      text-shadow: 0 0 20px rgba(0,0,0,0.9);
-      padding: 20px;
-      max-width: 90%;
-      z-index: 10;
-    }
-    h1 {
-      font-size: 3rem;
-      margin: 0 0 20px;
-      line-height: 1.1;
-      font-weight: 900;
-    }
-    .palm { font-size: 2.5rem; margin: 0 10px; vertical-align: middle; }
-    button {
-      background: #FFD700;
-      color: #0A3D62;
-      padding: 18px 40px;
-      border: none;
-      border-radius: 16px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.4);
-      margin-top: 15px;
-      transition: all 0.2s;
-    }
-    button:active { transform: scale(0.95); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YaadLife Lite - Jamaica Stays & Rides</title>
+    <style>
+        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background: #f4f4f4; }
+        .header { text-align: center; background: #28a745; color: white; padding: 20px; }
+        .dropdown { margin: 20px 0; }
+        select { padding: 10px; width: 100%; font-size: 16px; }
+        button { background: #007bff; color: white; padding: 10px 20px; border: none; cursor: pointer; margin: 10px 0; }
+        button:hover { background: #0056b3; }
+        #botfather-btn { background: #ffc107; color: black; }
+        .modal { display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); }
+        .modal-content { background: white; margin: 15% auto; padding: 20px; width: 70%; border-radius: 5px; }
+        .close { color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background: #f2f2f2; }
+        .local { background: #d4edda; } /* Highlight local owned */
+        .fee { font-weight: bold; color: #28a745; }
+    </style>
 </head>
 <body>
-  <div id="map">
-    <div class="overlay">
-      <h1>YaadLife<span class="palm">🌴</span>Lite</h1>
-      <button onclick="Telegram.WebApp.showAlert('Hunt X → Book Villa → Earn SBT')">Launch the Island</button>
+    <div class="header">
+        <h1>YaadLife Lite</h1>
+        <p>Discover Yaad – Local Stays & Rides in Jamaica</p>
+        <img src="IMG_0039.jpg" alt="YaadLife Vibes" style="max-width: 100%; height: auto;">
     </div>
-  </div>
-  <script>
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-  </script>
+
+    <div class="dropdown">
+        <label for="parish">Select Parish:</label>
+        <select id="parish">
+            <option value="">Choose a parish...</option>
+            <option value="kingston">Kingston</option>
+            <option value="st-andrew">St. Andrew</option>
+            <option value="st-thomas">St. Thomas</option>
+            <option value="portland">Portland</option>
+            <option value="st-mary">St. Mary</option>
+            <option value="st-ann">St. Ann</option>
+            <option value="trelawny">Trelawny</option>
+            <option value="st-james">St. James</option>
+            <option value="hanover">Hanover</option>
+            <option value="westmoreland">Westmoreland</option>
+            <option value="st-elizabeth">St. Elizabeth</option>
+            <option value="manchester">Manchester</option>
+            <option value="clarendon">Clarendon</option>
+            <option value="st-catherine">St. Catherine</option>
+        </select>
+        <br>
+        <button onclick="scanAccommodations()">Scan Stays</button>
+        <button onclick="scanTransport()">Scan Rides</button>
+        <button id="botfather-btn" onclick="openBotFather()">Chat with BotFather</button>
+    </div>
+
+    <div id="results"></div>
+
+    <!-- BotFather Modal -->
+    <div id="botfather-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeBotFather()">&times;</span>
+            <h2>BotFather – Your Yaad Guide</h2>
+            <div id="chat-log" style="height: 200px; overflow-y: scroll; border: 1px solid #ddd; padding: 10px; margin: 10px 0;"></div>
+            <input type="text" id="chat-input" placeholder="Ask me: Book a villa in Portland?" style="width: 70%; padding: 10px;">
+            <button onclick="sendMessage()" style="width: 25%; padding: 10px;">Send</button>
+        </div>
+    </div>
+
+    <script>
+        // Mock data for scans (simulate Airbnb/Booking/Lynk API pulls – prioritize local)
+        const mockAccommodations = {
+            kingston: [
+                { name: "Rasta Road Villa", source: "Airbnb", price: 150, local: true, fee: 7.5 },
+                { name: "Harbor View Apt", source: "Booking.com", price: 80, local: false, fee: 4 },
+                { name: "Kingston Roots Guesthouse", source: "Local Board", price: 100, local: true, fee: 5 }
+            ],
+            'st-andrew': [
+                { name: "Blue Mountains Cabin", source: "Airbnb", price: 200, local: true, fee: 10 },
+                // Add more per parish as needed
+            ]
+            // Extend for all 14 parishes with similar mock data
+        };
+
+        const mockTransport = {
+            kingston: [
+                { name: "Lynk Ride to Airport", source: "Lynk", price: 25, priority: true },
+                { name: "JUTC Bus", source: "Public", price: 2, priority: false }
+            ]
+            // Similar for others
+        };
+
+        function scanAccommodations() {
+            const parish = document.getElementById('parish').value;
+            if (!parish || !mockAccommodations[parish]) {
+                alert('Select a parish first!');
+                return;
+            }
+            let table = '<table><tr><th>Name</th><th>Source</th><th>Price (USD)</th><th>YaadLife Fee (5%)</th><th>Total</th></tr>';
+            mockAccommodations[parish].forEach(item => {
+                const total = item.price + item.fee;
+                const rowClass = item.local ? 'local' : '';
+                table += `<tr class="${rowClass}"><td>${item.name}</td><td>${item.source}</td><td>$${item.price}</td><td class="fee">$${item.fee}</td><td>$${total}</td><td><button onclick="bookItem('${item.name}', ${total})">Book</button></td></tr>`;
+            });
+            table += '</table>';
+            document.getElementById('results').innerHTML = `<h3>Stays in ${parish.replace('-', ' ')} (Prioritizing Local)</h3>` + table;
+        }
+
+        function scanTransport() {
+            const parish = document.getElementById('parish').value;
+            if (!parish || !mockTransport[parish]) {
+                alert('Select a parish first!');
+                return;
+            }
+            let table = '<table><tr><th>Name</th><th>Source</th><th>Price (USD)</th></tr>';
+            mockTransport[parish].sort((a, b) => b.priority - a.priority); // Prioritize Lynk
+            mockTransport[parish].forEach(item => {
+                table += `<tr><td>${item.name}</td><td>${item.source}</td><td>$${item.price}</td><td><button onclick="bookItem('${item.name}', ${item.price})">Book</button></td></tr>`;
+            });
+            table += '</table>';
+            document.getElementById('results').innerHTML = `<h3>Rides in ${parish.replace('-', ' ')} (Prioritizing Lynk)</h3>` + table;
+        }
+
+        function bookItem(name, total) {
+            // Background SBT Generation (stub – export JSON token)
+            const sbt = {
+                id: Date.now(),
+                user: 'YaadUser', // Tie to wallet later
+                item: name,
+                total: total,
+                timestamp: new Date().toISOString(),
+                type: 'SoulboundToken'
+            };
+            console.log('SBT Generated:', sbt); // Background – no UI flash
+            const blob = new Blob([JSON.stringify(sbt, null, 2)], {type: 'application/json'});
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = `yaadlife-sbt-${sbt.id}.json`;
+            a.click();
+            alert(`Booked ${name}! SBT generated in background. Total: $${total}`);
+        }
+
+        // BotFather UX
+        function openBotFather() {
+            document.getElementById('botfather-modal').style.display = 'block';
+        }
+        function closeBotFather() {
+            document.getElementById('botfather-modal').style.display = 'none';
+        }
+        function sendMessage() {
+            const input = document.getElementById('chat-input');
+            const log = document.getElementById('chat-log');
+            const msg = input.value;
+            if (!msg) return;
+            log.innerHTML += `<p><strong>You:</strong> ${msg}</p>`;
+            // Mock response (expand with real AI later)
+            setTimeout(() => {
+                log.innerHTML += `<p><strong>BotFather:</strong> Got it! Scanning for "${msg}". Try: Villas in St. Ann?</p>`;
+                log.scrollTop = log.scrollHeight;
+            }, 500);
+            input.value = '';
+        }
+        window.onclick = function(event) {
+            const modal = document.getElementById('botfather-modal');
+            if (event.target == modal) closeBotFather();
+        }
+    </script>
 </body>
 </html>
