--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -296,6 +296,6 @@ function payNow(){
 
   alert('Payment simulated! SBT downloaded, QR codes ready.');
 }
-</script>
+<script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 </body>
 </html>
