--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -294,6 +294,53 @@ function payNow(){
     qrArea.appendChild(div);
   });
 
+  function payNow(){
+  const total = parseFloat(document.getElementById('total').textContent);
+  if(total===0) return alert('Add something to your package first!');
+
+  // ---- 1. SBT (background) ----
+  const sbt = {
+    id: Date.now(),
+    user: 'YaadUser-'+Math.random().toString(36).substr(2,5),
+    package: {
+      from: state.from,
+      arrive: state.arrive,
+      parish: state.parish,
+      stay: state.stay?.name,
+      transport: state.transport.map(t=>t.name),
+      tours: state.tours.map(t=>t.name),
+      total
+    },
+    timestamp: new Date().toISOString(),
+    type: 'SoulboundVacationToken'
+  };
+  console.log('SBT generated →', sbt);
+  const blob = new Blob([JSON.stringify(sbt, null, 2)], {type:'application/json'});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url; a.download = `yaadlife-sbt-${sbt.id}.json`;
+  a.click();
+
+  // ---- 2. QR codes for each booked item ----
+  const qrArea = document.getElementById('qr-area');
+  qrArea.innerHTML = '<h3>Scan to redeem</h3>';   // clear previous
+  const items = [];
+  if(state.stay) items.push(`Stay: ${state.stay.name}`);
+  state.transport.forEach(t=>items.push(`Ride: ${t.name}`));
+  state.tours.forEach(t=>items.push(`Tour: ${t.name}`));
+
+  items.forEach(txt=>{
+    const div = document.createElement('div');
+    div.style = 'display:inline-block;margin:10px;text-align:center';
+    const qr = document.createElement('div');
+    new QRCode(qr, {text: txt, width:128, height:128});
+    div.appendChild(qr);
+    const cap = document.createElement('p');
+    cap.textContent = txt;
+    div.appendChild(cap);
+    qrArea.appendChild(div);
+  });
+
   alert('Payment simulated! SBT downloaded, QR codes ready.');
 }
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
