--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -30,7 +30,7 @@
   <!-- ==== STEP 0 – Opening Question ==== -->
   <div id="step0" class="step active">
     <h1>How can we help you book your vacation package?</h1>
-    <button onclick="nextStep(1)">Start Building</button>
+    <button id="start-button">Start Building</button>
   </div>
 
   <!-- ==== STEP 1 – Travel To Jamaica? ==== -->
