--- a/YaadLife-Lite/index.html
+++ b/YaadLife-Lite/index.html
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
 
-  <div class="hero"><img src="IMG_0039.jpg" alt="Jamaica Vibes"></div>
+  <div class="hero"><img src="IMG_0039.jpeg" alt="Jamaica Vibes"></div>
 
   <!-- ==== STEP 0 – Opening Question ==== -->
   <div id="step0" class="step active">
